# binary-tuples

./: Cargo.toml  LICENSE  README.md
src/: constants.rs  errors.rs  lib.rs  segment.rs  utils.rs
