[package]
name = "binary_tuples"
version = "0.1.1"
authors = ["michael <michael.stephen.oates@gmail.com>"]
license="MIT"
description="Ordered binary tuple implementation for rust based upon and compatible with FoundationDB tuples"
repository="https://github.com/Myrannas/binary-tuples"

[dependencies]
byteorder = "1.2.1"

[dependencies.uuid]
version = "0.6"
features = ["v4"]